tests/paczka1/small_fuzzy/58756401.err
Error in line 1: qwaEcAo A110 91,7
Error in line 6: o87epgf A197 26,2
Error in line 8: 0nR A433 4,7
Error in line 14: qwaEcAo S949 13,4
